test/cases/parser/BadExtern.errors
src/BadExtern.b:5:12: Syntax error ('extern' can only be used with 'function' or 'type')
